k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snelnieuws-api
  namespace: emudoi-snelnieuws-api
  labels:
    app.kubernetes.io/name: snelnieuws-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: snelnieuws-api
  ports:
    - name: http
      port: 80
      targetPort: http
